horizontal scroll issue fix and userprofile improvements

--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -16,11 +16,13 @@
   width: 100vw;
   overflow: auto; /* Enable scrolling if content overflows */
   overflow-y: auto;
+  padding-bottom: 20%;
+  overflow-x: hidden; /* remove horizontal scroll */
 }
 
 .uppernav {
   height: 10vh; /* 10% of the viewport height */
-  width: 100%;
+  width: 100vw;
   padding: 15px 20px;
   background-color: transparent;
   display: flex;
@@ -37,7 +39,7 @@
   font-weight: bold; /* Makes the font bold */
   cursor: pointer; /* Indicates the text is clickable */
   text-decoration: none;
-  margin-left: 37px;
+  margin-left: 2.5%;
 }
 
 h1 {
@@ -80,7 +82,7 @@ h1 {
   justify-content: flex-start;
   top: 0;
   min-height: 10vh;  
-  padding: 15px;
+  padding: 2.5%;
   text-align: left; /* Center the welcome text and search bar */
   display: flex;
   flex-direction: column;
@@ -155,8 +157,7 @@ h1 {
   padding: 2.5%;
   overflow-y: auto;
   justify-content: flex-start;
-  margin-top: 2.5%;
-  
+  margin-top: 10%;
 }
 
 /* Adjust for medium-sized screens (tablets) */
@@ -218,6 +219,10 @@ h1 {
 
 .actionbutton:hover {
   background-color: #e0d1d5;
+}
+
+.search-wrapper {
+  padding: 2.5%;
 }
 
 .search-form {
