--- a/src/MessagingPage.css
+++ b/src/MessagingPage.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    padding-bottom: 20%;
 }
 
 .header {
