--- a/src/Product.css
+++ b/src/Product.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #FFF;
+    overflow: auto;
 }
 
 .topsection {
