--- a/src/UserProfile.css
+++ b/src/UserProfile.css
@@ -12,8 +12,6 @@ body {
   flex-direction: column;
   height: 100vh;
   width: 100vw;
-  overflow: auto; /* Enable scrolling if content overflows */
-  overflow-y: auto;
 }
 
 
@@ -22,12 +20,11 @@ body {
   justify-content: flex-start;
   top: 0;
   min-height: 10vh;  
-  padding: 25px;
+  padding: 5%;
   text-align: left; /* Center the welcome text and search bar */
   display: flex;
   flex-direction: column;
   justify-content: left;
-  overflow: visible;
 }
 
 
@@ -36,6 +33,7 @@ body {
   align-items: center;
   padding: 2.5%;
   overflow: visible;
+  padding-bottom: 20%;
 }
 .profile-image { 
   border-radius: 25px; /* Circular profile picture */
@@ -76,8 +74,8 @@ body {
 .actions-container {
   display: flex;
   justify-content: space-between;
-  width: 100%; /* Adjust the width as needed */
-  margin-bottom: 20px; /* Add some margin to the bottom */
+  width: 100vw; /* Adjust the width as needed */
+  margin-bottom: 5%; /* Add some margin to the bottom */
 }
 .action-button { /* EDIT BUTTON */
   background-color: #f1e4e7;
@@ -144,7 +142,7 @@ body {
 .my-items { /* My Items title */
   font-weight: bold;
   font-size: 26px;
-  padding: 5% 5% 0% 5% /* for parallelism with "About You" section | 2.5% padding + 2.5% .about-section padding */
+  padding: 5% 5% 0% 5%; /* for parallelism with "About You" section | 2.5% padding + 2.5% .about-section padding */
 }
 
 
@@ -155,6 +153,7 @@ body {
   padding: 2.5%;
   margin-top: 2.5%;
   justify-content: flex-start;
+  overflow: auto;
 }
 
 /* Apply styles directly to disabled textareas */
@@ -190,6 +189,7 @@ textarea:disabled {
   text-align: center;
   height: 10px;
   text-align: left;
+  padding: 25px;
 }
 .productimage { /* see in HomePage where this div is added? la tzida hone tzabit 7ajem lsoura*/
   width: 100vw;
